# GD-Downloader

./: .gitignore  LOGGING_BEHAVIOR.md  LOGGING_SUMMARY.md  README.md  auth_drive.py  checkpoint.py  cleanup.py  config.py  downloader.py  errors.py  i18n.py  improvements_summary.md  interface_guide.md  legal_notice.md  logger.py  main.py  pyproject.toml  pytest.ini  quick_start.md  requirements.txt  run_tests.py  technical_notes.md  test_scroll.py  test_simple.py  ui.py  validators.py
Documentation/: CHANGES_I18N.md  I18N_IMPLEMENTATION.md  QUICK_REFERENCE_I18N.md
docs/: API_REFERENCE.md  LANGUAGE_USAGE.md  TESTING_GUIDE.md  TRANSLATION_GUIDE.md  checkpoint_usage_guide.md  requirements_and_setup.md
docs/developer/: api_reference.md  architecture.md  contributing.md  testing.md
docs/guides/: checkpoints.md  internationalization.md  logging.md  troubleshooting.md
docs/legal/: legal_notice.md
docs/user/: configuration.md  faq.md  setup.md  user_guide.md
lang/: en.lang  pt.lang
scripts/: quick_test.py  test_functionality.py
tests/: conftest.py
tests/fixtures/: mock_data.py
tests/unit/: test_basic_validation.py  test_checkpoint.py  test_config.py  test_errors.py  test_i18n.py  test_ui.py  test_validators.py
tests/utils/: test_helpers.py
